# printlogr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  python-test.yml
printlogr/: LICENSE  __init__.py  cli.py  print_logger.py
printlogr/tests/: __init__.py  test_print_logger.py
